# OpenGLTest

./: CMakeLists.txt  conanfile.txt
src/: main.cpp
src/display/: camera.h  shaders.h
src/glad/: glad.c  glad.h
src/shaders/: alphaFragmentShader.glsl  alphaVertexShader.glsl
